# plant-desease-detection

./: .gitignore  GEMINI.md  IDEA_BUFFER.md  pyproject.toml  pyrightconfig.json
docs/: ALGORITHM_RESEARCH.md  BUSINESS_EVALUATION.md  BUSINESS_INTEGRATION.md  CLEANING_REPORT.md  DATASET_CONSTRUCTION_REPORT.md  DATA_ARCHITECTURE.md  DATA_QUALITY.md  DISEASE_IDENTIFICATION_MIGRATION.md  EDA.md  EXPERIMENT_LOG.md  ML_PIPELINE.md  ML_TESTING_REPORT.md  MODEL_EVALUATION_METRICS.md  PIPELINE.md  PIPELINE_AUTOMATION.md  PROJECT_PLANNING.md  PROJECT_REQUIREMENT_ANALYSIS.md
etl/: config.toml  extract.py  inference.py  load.py  pipeline.py  quality.py  transform.py
logging/: setup.py
ml_pipeline/: data.py  evaluate.py  storage.py  train.py  utils.py
report_creation/: .gitignore  package-lock.json
research/: eda_observations.html  eda_observations.ipynb  eda_observations.py  eda_v2.py  experiment_config.toml  model_comparison.py
scripts/: audit_quality.py  benchmark_pipeline.py  cleaning_script.py  export_torchscript.py  fetch_inaturalist_images.py  generate_synthetic_data.py  inspect_exif.py  inspect_extract.py  migrate_metadata.py  migrate_provenance.py  observability_report.py  pipeline_scheduler.py  run_champion_pipeline.py  run_cv.py  scenario_batch_processing.py  scenario_fixed_example.py  scenario_new_data.py  seed_weather_cache.py
steps/: pdftomd.sh
tests/: test_fault_tolerance.py  test_label_extraction.py  test_ml_models.py  test_null_dates.py  test_pipeline_recovery.py  test_sources.py  test_transform.py  test_weather_fault_tolerance.py  test_yolo_source.py
(+37 files in other folders)
