[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "plant-disease-etl"
version = "0.1.0"
dependencies = [
    "requests",
    "pandas",
    "pandera",
    "astral",
    "openmeteo-requests",
    "requests-cache",
    "retry-requests",
    "pytest",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["."]
